src/styles/index.css
:root {
  --color-correct: #33a151;
  --color-contains: #bfb022;
  --color-incorrect: #787c7e;
  --color-unknown: #9d9d9d;
  --color-background: white;
  --color-tile-light: #f4f4f4;
  --color-tile-light-border: lightgray;
  --color-tile-emphasis-border: gray;
  --color-tile-invalid-word: #eedddd;
  --color-tile-invalid-word-border: gray;
  --color-keyboard-key: #cccccc;
  --color-keyboard-text: black;
  --color-text-default: black;
  --color-tile-text: white;
  --color-overlay: #ffffff88;
  --invert-icons: 0;
}

[darkMode="true"] {
  --color-background: #0a0a0a;
  --color-tile-light: #141414;
  --color-tile-light-border: #2f2f2f;
  --color-tile-emphasis-border: #555555;
  --color-incorrect: #555a5c;
  --color-unknown: #909090;
  --color-tile-invalid-word: #441111;
  --color-tile-invalid-word-border: #555555;
  --color-keyboard-key: #b0b0b0;
  --color-keyboard-text: black;
  --color-text-default: #e3e3e3;
  --color-tile-text: white;
  --color-overlay: #00000088;
  --invert-icons: 1;
}

[highContrast="true"] {
  --color-correct: #1E88E5;
  --color-contains: #FFC107;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  color: var(--color-text-default);
  background: var(--color-background);
}

h1, h2 {
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  text-align: center;
}

/*
 ------------------------------------ App ------------------------------------
 */

:root {
  --app-height: 100%;
}

.app-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow: hidden;
  height: var(--app-height);
}

/*
 ------------------------------------ Header ------------------------------------
 */

header {
  width: 100%;
  max-width: 475px;
  margin: 0 auto;
  position: relative;
}

header h1 {
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 36px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.menubar {
  position: absolute;
  top: 10px;
  right: 10px;
  display: flex;
}

header img {
  max-width: 36px;
  display: block;
  padding: 10px 5px;
  cursor: pointer;
  filter: invert(var(--invert-icons));
}

header img:hover,
header img:focus,
header img:active {
  transform: translate(0, 2px);
}

header button {
  display: block;
  position: absolute;
  top: 16px;
  left: 10px;

  background-color: transparent;
  border: 2px solid var(--color-text-default);
  cursor: pointer;
  color: var(--color-text-default);
  font-size: 16px;
  font-weight: 700;
  padding: 10px;
}

header button:hover,
header button:focus,
header button:active {
  top: 18px;
}

@media(max-width: 330px) {
  header h1 {
    font-size: 24px;
  }

  header button {
    top: 12px;
    font-size: 14px;
    padding: 7px;
  }

  header img {
    max-width: 30px;
    padding: 5px 3px;
  }
}

/*
 ------------------------------------ GameBoard ------------------------------------
 */

.game-board-container {
  margin: 0 auto;
  width: 95%;
  max-width: 475px;
  overflow-y: auto;
}

/*
 ------------------------------------ Guess ------------------------------------
 */

.guess {
  display: flex;

  /* No text highlighting */
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

.tile-spacer {
  width: 15%;
}

.tile {
  width: 100%;
  margin: 2px;
  border: 2px solid var(--color-background);
}

.tile div {
  padding-top: 100%;
  position: relative;
}

.tile div span {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-transform: uppercase;
  font-size: 20px;
  font-weight: 700;
}

@media(min-width: 350px) {
  .tile div span  {
    font-size: 24px;
  }
}

@media(min-width: 450px) {
  .tile div span  {
    font-size: 32px;
  }
}

.tile-light-gray {
  background-color: var(--color-tile-light);
}

.tile-light-border {
  border-color: var(--color-tile-light-border);
}

.tile-emphasis-border {
  border-color: var(--color-tile-emphasis-border);
}

@keyframes invalid-word-animation {
  0%   { transform: translate(-4px, 0); }
  12%  { transform: translate(4px, 0); }
  25%  { transform: translate(-4px, 0); }
  37%  { transform: translate(4px, 0); }
  50%   { transform: translate(-4px, 0); }
  62%  { transform: translate(4px, 0); }
  75%  { transform: translate(-4px, 0); }
  87%  { transform: translate(4px, 0); }
  100% { transform: translate(0, 0); }
}

.tile-invalid-word {
  animation-name: invalid-word-animation;
  animation-duration: 450ms;
  background: var(--color-tile-invalid-word);
}

.guess .tile-submitted-letter {
  cursor: pointer;
}

.guess .tile-green {
  background-color: var(--color-correct);
  border-color: var(--color-correct);
  color: var(--color-tile-text);
}

.guess .tile-yellow {
  background-color: var(--color-contains);
  border-color: var(--color-contains);
  color: var(--color-tile-text);
}

.guess .tile-gray {
  background-color: var(--color-unknown);
  border-color: var(--color-unknown);
  color: var(--color-tile-text);
}

.guess .tile-dark-gray {
  background-color: var(--color-incorrect);
  border-color: var(--color-incorrect);
  color: var(--color-tile-text);
}

/*
 ------------------------------------ Keyboard ------------------------------------
 */

/* Center the keyboard with a max-width of 600px and width 95% */
.keyboard {
  max-width: 475px;
  margin: 15px auto 0;
  width: 95%;
}

/* Make each row a flexbox */
.keyboard-row {
  display: flex;
  margin-bottom: 6px;
}

/* Style keys, specify height, margin, and flex */
.keyboard .key {
  height: 60px;
  margin: 0 6px 0 0;
  padding: 0;
  flex: 1;
  border: none;
  color: var(--color-keyboard-text);
  background-color: var(--color-keyboard-key);
  text-transform: uppercase;
  font-weight: 600;
  font-size: 15px;
  border-radius: 4px;
}

.keyboard .tile-dark-gray {
  background-color: var(--color-incorrect);
  color: white;
}

.keyboard .tile-green {
  background-color: var(--color-correct);
  color: white;
}

.keyboard .tile-yellow {
  background-color: var(--color-contains);
  color: white;
}

/* Specify no margin on last key in row */
.keyboard-row .key:last-of-type {
  margin-right: 0;
}

/* Specify flex for wide keys */
.keyboard-row .key-wide {
  flex: 1.5;
  font-size: 12px;
}

/* Specify flex for spacer */
.keyboard-row .spacer {
  flex: 0.5;
}

/*
 ------------------------------------ GameModal ------------------------------------
 */

.close {
  position: absolute;
  right: 10px;
  top: 10px;
  width: 36px;
  height: 36px;
  cursor: pointer;
  filter: invert(var(--invert-icons));
}

.ReactModal__Overlay {
  opacity: 0;
  transition: opacity 200ms ease-in-out;
}

.ReactModal__Overlay--after-open {
  opacity: 1;
}

.ReactModal__Overlay--before-close {
  opacity: 0;
}

/*
 ------------------------------------ TutorialModal ------------------------------------
 */

.tutorial-modal-content h2 {
  border-bottom: 1px solid var(--color-tile-light-border);
  padding-bottom: 8px;
  margin-bottom: 8px;
}

.tutorial-modal-content img {
  width: 80%;
  display: block;
  margin: 0 auto;
}

/*
 ------------------------------------ EndModal ------------------------------------
 */

.end-modal-content {
  padding-top: 25%;
}

.end-modal-content h1 {
  font-size: 48px;
  font-weight: 700;
  letter-spacing: 3px;
}

.end-modal-content p {
  text-align: center;
  margin: 24px 0;
}

.end-modal-content button {
  background-color:#44c767;
  cursor:pointer;
  color: white;
  font-size:17px;
  padding:16px 31px;
  text-decoration:none;
  font-weight: 700;
  letter-spacing: 2px;
  text-transform: uppercase;
  border: 0;
  display: block;
}
.end-modal-content button:hover,
.end-modal-content button:focus {
  background-color:#33a151;
}
.end-modal-content button:active {
  background-color:#33a151;
  position:relative;
  top:1px;
}

.end-modal-content img {
  max-width: 48px;
  padding: 5px;
  cursor: pointer;
  filter: invert(var(--invert-icons));
}

.end-modal-content img:hover,
.end-modal-content img:focus,
.end-modal-content img:active {
  position: relative;
  top: 2px;
}

.button-bar {
  width: 80%;
  display: flex;
  margin: 0 auto;
  justify-content: space-between;
}

.end-modal-links {
  display: flex;
  justify-content: right;
}

@media(max-width: 450px) {
  .end-modal-links {
    margin: 10px auto 0;
  }

  .button-bar {
    flex-direction: column;
  }
}

/*
 ------------------------------------ SettingsModal ------------------------------------
 */

.settings-modal-content {
  padding-top: 10%;
}

.settings-modal-content h2 {
  padding-bottom: 16px;
  border-bottom: 1px solid var(--color-tile-light-border);
  margin-bottom: 26px;
}

.setting {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 90%;
  margin: 50px auto;
}

.setting h4, .setting p {
  margin: 0 0 4px;
}

